Fixed text being too large on mobile

--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -403,3 +403,9 @@ h1 {
 .button:not(:last-child) {
   margin-bottom: 64px;
 }
+
+@media screen and (max-width: 430px) {
+  .roller #rolltext {
+    font-size: 1.5rem;
+  }
+}
